[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphic-design-mcp"
version = "1.0.0"
description = "Grafik tasarım analizi için MCP aracı"
authors = [
    {name = "mcanince", email = "mcanince@example.com"},
]
dependencies = [
    "fastmcp",
    "requests",
    "openai",
]
requires-python = ">=3.8"

[project.scripts]
graphic-design-mcp = "mcp_graphic_design:main" 