[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphic-design-mcp"
version = "2.0.1"
description = "Grafik tasarım analizi için MCP aracı - PNG raporları otomatik upload ve paylaşılabilir linkler"
authors = [
    {name = "mcanince", email = "mcanince@example.com"},
]
dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "Pillow>=9.0.0",
]
requires-python = ">=3.8"

[project.scripts]
graphic-design-mcp = "mcp_graphic_design:main" 

[tool.hatch.build.targets.wheel]
packages = ["mcp_graphic_design.py"] 