[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphic-design-mcp"
version = "3.0.0"
description = "Grafik tasarım analizi MCP - PNG raporlar direkt chat'e + GitHub auto-commit (API key gerektirmez)"
authors = [
    {name = "mcanince", email = "mcanince@example.com"},
]
dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "Pillow>=9.0.0",
]
requires-python = ">=3.8"

[project.scripts]
graphic-design-mcp = "mcp_graphic_design:main" 

[tool.hatch.build.targets.wheel]
packages = ["mcp_graphic_design.py"] 